fix bug overflow-y filtri di ricerca

--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -531,7 +531,7 @@ ion-button.bottone-accedi {
 
 .card-object {
   position: fixed;
-  max-width: 19rem;
+  max-width: 21rem;
 }
 
 .label-autori-icona {
